[package]
name = "yktrace"
version = "0.1.0"
authors = ["Edd Barrett <vext01@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
bincode = "1.3.1"
fallible-iterator = "0.2.0"
fxhash = "0.2.1"
gimli = "0.23.0"
hwtracer = { git = "https://github.com/softdevteam/hwtracer" }
intervaltree = "0.2"
lazy_static = "1.4.0"
libc = "0.2.80"
memmap = "0.7.0"
parking_lot = "0.11"
phdrs = { git = "https://github.com/softdevteam/phdrs" }
storage-map = "0.3"
ykpack = { path = "../ykpack" }

[dependencies.object]
version = "0.22.0"
default-features = false
features = ["read_core", "elf"]

[dev-dependencies]
fm = "0.1.4"
regex = "1.4.2"
